스터디 - 구조 공부

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">StudyAnd</string>
+    <string name="hello_world">HELLO WORLD</string>
+    <string name="go_button">GO BUTTON</string>
 </resources>
